CollapsingToolbar OK Nested Navigation Graph OK Starting Clean Architecture nay packaging

--- a/KeD_Demos/app/src/main/res/values/strings.xml
+++ b/KeD_Demos/app/src/main/res/values/strings.xml
@@ -1,3 +1,58 @@
 <resources>
     <string name="app_name">KaEdDevDemo</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="login_title">Login</string>
+    <string name="register_title">Register</string>
+    <string name="password_hiden_content_description">Show Password</string>
+    <string name="password_visible_content_description">Hide Password</string>
+    <string name="dont_have_account_yet">Don\'t have an account yet ?</string>
+    <string name="sign_up">Sign up!</string>
+    <string name="login_hint">E-mail / Username</string>
+    <string name="password_hint">Password</string>
+    <string name="user_name_hint">Username</string>
+    <string name="email_hint">E-mail</string>
+    <string name="already_have_an_account">Already have and account ?</string>
+    <string name="sign_in">Sign In</string>
+    <string name="register">Register</string>
+    <string name="unLike">"Unlike "</string>
+    <string name="like">Like</string>
+    <string name="read_more">Read more</string>
+    <string name="comment">Comment</string>
+    <string name="share">Share</string>
+    <string name="home_icon_content_description">Home</string>
+    <string name="chat_icon_content_description">Chat</string>
+    <string name="activity_icon_content_description">Activity</string>
+    <string name="profile_icon_content_description">Profile</string>
+    <string name="make_post">Create New Post</string>
+    <string name="home">Home</string>
+    <string name="chat">Chat</string>
+    <string name="activity">Activity</string>
+    <string name="profile">Profile</string>
+    <string name="toolbar_back_arrow_content_description">Back</string>
+    <string name="your_feed">Your feed</string>
+    <string name="liked">liked</string>
+    <string name="commented_on">commented on</string>
+    <string name="your_post">your post</string>
+    <string name="your_activity">Your activity</string>
+    <string name="your_profile">Your profile</string>
+    <string name="banner_image">banner image</string>
+    <string name="profile_image_content_description">Profile Image</string>
+    <string name="followers">Followers</string>
+    <string name="following">Following</string>
+    <string name="posts">Post</string>
+    <string name="unfollow">Unfollow</string>
+    <string name="follow">Follow</string>
+    <string name="edit_profile_title">Edit your profile</string>
+    <string name="git_hub_link_hint">GitHub profile URL</string>
+    <string name="personal_link_hint">Your website URL</string>
+    <string name="linked_in_hint">LinkedIn profile URL</string>
+    <string name="select_top_3_skills">"Select your top 3 skills :"</string>
+    <string name="your_bio_hint">Your biography</string>
+    <string name="save_changes_content_description">Save changes</string>
+    <string name="create_new_post_title">Create new post</string>
+    <string name="standard_search_bar_placeholder">Search</string>
+    <string name="search_icon_content_description">Search icon</string>
+    <string name="close_icon_content_description">Close</string>
+    <string name="zoro_story">Zoro was born 21 years ago in the East Blue to Tera and Roronoa Arashi, a descendant of the Shimotsuki Family. By the time Zoro was 8 years old, his father had already been killed in a battle against pirates threatening Shimotsuki Village, and his mother had died of illness, leaving Zoro orphaned. At the village\'s dojo, he trained to be a swordsman. Zoro and Kuina\'s Promise Zoro and Kuina making their promise to become the world\'s greatest swordsmen. Even as a child, Zoro was strong enough to defeat most adults, but could not defeat Kuina, the daughter of the dojo\'s master, Koushirou. During a training session, Zoro met and talked with Kuina\'s grandfather, Shimotsuki Kozaburo, who gifted him a pair of swords to aid in his practice. The following year while both Zoro and Kuina were training, the Revolutionary Army stopped by their dojo. At some point Zoro came to Koushirou asking if it was true if swordsmen could cut through anything and even steel to which Koushiro confirmed. He then demonstrated to Zoro a piece of paper that he cut without it splitting confusing Zoro, Koushiro then explained to Zoro that part of swordsmanship lies within a sword understanding the will of what the swordsman wishes to protect and what and when he wishes to cut. Further telling Zoro that a sword that cuts and injures anything it touches isn\'t a real sword, Zoro then told his sensei he would strive to become a swordsman that could cut through anything making Koushirou question if he was listening at all</string>
+    <string name="create_new_hero">Add New Nakama</string>
 </resources>
